--- a/lectures/ls-algebra2-2023.html
+++ b/lectures/ls-algebra2-2023.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Graduate class: Topology 2</title>
+    <title>Graduate class: Algebra 2</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -69,37 +69,34 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
+			<div class="card-header"><h3>Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
-				<h4>Time and place: on campus, Fall Semester 2021</h4>
-				<br/>
+				<h4>Time and place: online course, Spring Semester 2021</h4>
 				<h4>Outline of the course:</h4>			
-				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space and homology groups, with a small outlook at cohomology groups at the end.</p>
-				<p class="card-text"><b>Chapter 0: Preliminaries</b><br/>
-				We will start with a short revision of definitions and results from basic topology that will be needed. The main purpose here is just to fix notations and conventions for the rest of the course. A pdf with the notes for the preliminaries can be found below as we will go through them quite quickly.<br/>
-				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
-				In this section we will discuss the definition of the fundamental group. We will also go into details about the fundamental group of spheres and look at various applications of this result. Finally we will discuss the van Kampen theorem, the main tool to calculate fundamental groups of spaces by splitting the space up into smaller pieces. We will also go into some details about covering spaces of certain connected spaces and how these are related to the fundamental group.<br/>
-				<b>Prerequisites:</b> The main prerequisite for this part of the course is basic knowledge of topology, e.g. what is a topological space, a continuous map, or a connected space.<br/>
-				<p class="card-text"><b>Chapter 2: Homology</b><br/>
-				In this section we discuss the concept of homology. We will give an idea of what a general homology theory is, but we will focus in detail on simplicial and singular homology. The main goal here, in addition to the basic definition and properties, are the long exact sequence of homology, the excision theorem, and the Mayer-Vietoris sequence.<br/>
-				<b>Prerequisites:</b> We will make some use of basic construction from homological algebra in this chapter, hence it is useful to be familiar with the snake lemma and the five lemma, but the statements themselves will be explained in the course.<br/>
-				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
-				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
-				<h4>Exercises:</h4>
-				There will be two exercise sheets in total, the first will cover topics related to the fundamental group, while the third one will deal with applications of the fundamental group and homology groups.<br/>
-				<h4>Examination:</h4>
-				<p>The final mark for the lecture will be comprised of the following parts:
+				<p class="card-text">This course is an introduction to modern abstract algebra. The focus will be on properties of rings and modules over rings.</p>
+				<p>To formulate the content in a modern way we will give a small introduction into categories and homological algebra. All of these will be explained with examples for easy to understand rings and modules, like fields, the integers, or the polynomial ring.</p>
+				<p class="card-text"><b>Main goals of the course</b><br/>
 				<ul>
-					<li>Written report on sheet 1: Basics on topology and the fundamental group</li>
-					<li>Written report on sheet 2: Applications of the fundamental group and homology</b></li>
-					<li>Written exam after the end of the course</li>
+					<li>Introduction of categories, functors and universal objects</li>
+					<li>Understanding the notions from part 1. in the context of modules over rings</li>
+					<li>Classifying modules over Division rings and linear algebra over division rings</li>
+					<li>Classifying modules over principal ideal domains and applications like the structure theorem for abelian groups and the Jordan normal form for matrices</li>
+					<li>Understanding the notions of simple, semi-simple, artinian, and noetherian rings and how they are related, as well as seeing examples for all of these classes of rings.</li>
 				</ul>
-				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
-				<p></p>	
-				<h4>References:</h4>
-				<p class="card-text">The course will mostly use the following reference.<br/>
+				<h4>Passing conditions:</h4>
+				<p>There will be two written homework assignments during the semester, one at the end of week 2 and one at the end of week 5. Both have a time limit until submission of two weeks, the exact deadline will be listed with the assignment. There will also be a final exam after the end of the course. The final grade will be made up of the following parts:</p>
 				<ul>
-					<li><i>A. Hatcher</i>: Algebraic Topology, Cambridge University Press, 2002 <a href="https://pi.math.cornell.edu/~hatcher/AT/AT.pdf">(version on Hatcher's homepage)</a></li>
+					<li>Assignment 1: 25%</li>
+					<li>Assignment 2: 25%</li>
+					<li>Final exam: 50%</li>
+				</ul>
+				<p>As usual the passing grade will be 60% for the final grade.</p>
+				<h4>References:</h4>
+				<p class="card-text">We will not follow any specific book, but there will be updated lecture notes available after each lecture. For anyone that is interested in reading up on some more background or additional content, the following books contain various parts of the course:<br/>
+				<ul>
+					<li><i>Thomas W. Hungerford</i>: Algebra, Springer Graduate Texts in Mathematics Vol. 73</li>
+					<li><i>Serge Lang: Algebra</i>: Springer Graduate Texts in Mathematics Vol. 211</li>
+					<li><i>Robert B. Ash</i>: Basic Abstract Algebra: For Graduate Students and Advanced Undergraduates, Dover Publications</li>
 				</ul>
 				</p>
   			</div>
