--- a/lectures/ls-alggeometry-2023.html
+++ b/lectures/ls-alggeometry-2023.html
@@ -8,10 +8,16 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Graduate class: Algebraic geometry and algebraic groups</title>
+    <title>Graduate class: Algebraic Geometry</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
+<style>
+	.redtext {
+		color: red;
+	}
+</style>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
@@ -63,45 +69,53 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
+			<div class="card-header"><h3>Algebraic Geometry - 代数几何</h3></div>
   			<div class="card-body">
-				<h4>Time and place: on campus, Fall Semester 2019</h4>
+				<h3 class="redtext">Exam:</h3>
+				<p class="redtext"><b>tba</b></p>	
+				<h4>Time and place:</h4>
+				<p><b>Thursday:</b> 13:20 - 14:55 in 文一楼 139 (First lecture on 2022-02-24.)</p>			
+				<p><b>Friday:</b> 13:20 - 14:55 in 文一楼 139</p>			
 				<br/>
+				<h4>Outline of the course:</h4>			
+				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures.</p>
+				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
+				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
+				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.<br/>
+				<p class="card-text"><b>Chapter 2: Algebraic sets and Zariski topology</b><br/>
+				In this section we discuss the the concept of algebraic sets and the Zariski topology defined by them. We will also introduce the concept of the coordinate ring of an algebraic set and we will see how Hilbert's Nullstellensatz translates to these algebraic sets.<br/>
+				<b>Prerequisites:</b> Topology on a set, tensor product of vector spaces.<br/>
+				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
+				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
+				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
+				In this section we discuss affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
+				<b>Prerequisites:</b> Groups, index of subgroups<br/>
+				<p class="card-text"><b>Chapter 5+:</b><br/>
+				Depending on the progress of the lecture we will cover additional topics after the end of chapter 4.<br/>
+				<h4>Lecture notes:</h4>
+				There will be up-to date notes send out after the lecture on each Friday, covering the topic of the week’s lectures.<br/>
+				<h4>Exercises:</h4>
+				There will be two exercise sheets in total.<br/>
+				<ul>
+					<li><a>Exercise sheet 1</a> (available in week 3, deadline end of week 4)</li>
+					<li><a>Exercise sheet 2</a> (available in week 6, deadline end of week 7)</li>
+				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 7</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 9</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 3: Affine algebraic varieties,  <b>Deadline: week 11</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 13 (i.e. the week after the course ends)</b></li>
-					<li>Written exam in week 13 after the end of the course</li>
+					<li>Written report on sheet 1: <b>Deadline: 2022-03-20</b></li>
+					<li>Written report on sheet 2: <b>Deadline: 2022-04-10</b></li>
+					<li>Written exam after the end of the course</li>
 				</ul>
-				Each exercise report will make up 15% of the final score, while the exam in week 13 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
+				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
 				<p></p>	
-				<h4>Outline of the course:</h4>			
-				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is the pdf-file exercise sheet for each of the first four chapters.</p>
-				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
-				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
-				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.</p>
-				<p class="card-text"><b>Chapter 2: Algebraic sets</b><br/>
-				In this section we discuss the the concept of algebraic sets and the Zariski topology defined by them. We will also introduce the concept of the coordinate ring of an algebraic set and we will see how Hilbet's Nullstellensatz translates to these algebraic sets.<br/>
-				<b>Prerequisites:</b> Topology on a space, tensor product of vector spaces.</p>
-				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
-				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
-				<b>Prerequisites:</b> ---</p>
-				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
-				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
-				<b>Prerequisites:</b> Groups, index of subgroups</p>
-				<p class="card-text"><b>Chapter 5 and beyond: Outlook</b><br/>
-				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
 				<h4>References:</h4>
-				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
-				<b>Commutative algebra</b>
+				Commutative algebra<br/>
 				<ul>
 					<li><i>Atiyah, M. F., Macdonald, I. G.</i>: Introduction to Commutative Algebra, Reading, Mass. Addison Wesley 1969</li>
 					<li><i>Eisenbud, D.</i>: Commutative Algebra with a view towards Algebraic Geometry, Springer Verlag, Graduate Texts in Mathematics, No. 150, New York 1995</li>
 				</ul>
-				<b>Algebraic geometry and algebraic groups</b>
+				Algebraic geometry and algebraic groups<br/>
 				<ul>
 					<li><i>Borel, A.</i>: Linear algebraic groups. Second edition. Graduate Texts in Mathematics, No. 126. Springer-Verlag, New York, 1991.</li>
 					<li><i>Humphreys, J. E.</i>: Linear algebraic groups. Graduate Texts in Mathematics, No. 21. Springer-Verlag, New York-Heidelberg, 1975.</li>
