--- a/lectures/ls-topology2-2022.html
+++ b/lectures/ls-topology2-2022.html
@@ -71,8 +71,7 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
-				<h4>Time and place:</h4>
-				<p>The course was taught as an online course on the BIT online teaching system.</p>
+				<h4>Time and place: online course, Fall Semester 2022</h4>
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space and homology groups, with a small outlook at cohomology groups at the end.</p>
