--- a/lectures/ls-alggeometry-2023.html
+++ b/lectures/ls-alggeometry-2023.html
@@ -74,8 +74,8 @@
 				<h3 class="redtext">Exam:</h3>
 				<p class="redtext"><b>tba</b></p>	
 				<h4>Time and place:</h4>
-				<p><b>Thursday:</b> 13:20 - 14:55 in 文一楼 139 (First lecture on 2022-02-24.)</p>			
-				<p><b>Friday:</b> 13:20 - 14:55 in 文一楼 139</p>			
+				<p><b>Thursday:</b> 1-2节， 文萃楼 F102 (5-12 周)</p>			
+				<p><b>Friday:</b> 1-2节， 文萃楼 F102 (5-12 周)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures.</p>
@@ -92,19 +92,17 @@
 				<b>Prerequisites:</b> Groups, index of subgroups<br/>
 				<p class="card-text"><b>Chapter 5+:</b><br/>
 				Depending on the progress of the lecture we will cover additional topics after the end of chapter 4.<br/>
-				<h4>Lecture notes:</h4>
-				There will be up-to date notes send out after the lecture on each Friday, covering the topic of the week’s lectures.<br/>
 				<h4>Exercises:</h4>
 				There will be two exercise sheets in total.<br/>
 				<ul>
-					<li><a>Exercise sheet 1</a> (available in week 3, deadline end of week 4)</li>
-					<li><a>Exercise sheet 2</a> (available in week 6, deadline end of week 7)</li>
+					<li><a>Exercise sheet 1</a> (available in week 7, deadline end of week 8)</li>
+					<li><a>Exercise sheet 2</a> (available in week 10, deadline end of week 11)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on sheet 1: <b>Deadline: 2022-03-20</b></li>
-					<li>Written report on sheet 2: <b>Deadline: 2022-04-10</b></li>
+					<li>Written report on sheet 1: <b>Deadline: tba</b></li>
+					<li>Written report on sheet 2: <b>Deadline: tba</b></li>
 					<li>Written exam after the end of the course</li>
 				</ul>
 				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
