--- a/lectures/ls-algebra2-2023.html
+++ b/lectures/ls-algebra2-2023.html
@@ -71,7 +71,12 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
-				<h4>Time and place: online course, Spring Semester 2021</h4>
+				<h3 class="redtext">Exam:</h3>
+				<p class="redtext"><b>tba</b></p>	
+				<h4>Time and place:</h4>
+				<p><b>Thursday:</b> 6-7节， 文萃楼 G130 (3-10 周)</p>			
+				<p><b>Friday:</b> 6-7节， 文萃楼 G130 (3-10 周)</p>			
+				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">This course is an introduction to modern abstract algebra. The focus will be on properties of rings and modules over rings.</p>
 				<p>To formulate the content in a modern way we will give a small introduction into categories and homological algebra. All of these will be explained with examples for easy to understand rings and modules, like fields, the integers, or the polynomial ring.</p>
@@ -83,14 +88,21 @@
 					<li>Classifying modules over principal ideal domains and applications like the structure theorem for abelian groups and the Jordan normal form for matrices</li>
 					<li>Understanding the notions of simple, semi-simple, artinian, and noetherian rings and how they are related, as well as seeing examples for all of these classes of rings.</li>
 				</ul>
-				<h4>Passing conditions:</h4>
-				<p>There will be two written homework assignments during the semester, one at the end of week 2 and one at the end of week 5. Both have a time limit until submission of two weeks, the exact deadline will be listed with the assignment. There will also be a final exam after the end of the course. The final grade will be made up of the following parts:</p>
+				<h4>Exercises:</h4>
+				There will be two exercise sheets in total.<br/>
 				<ul>
-					<li>Assignment 1: 25%</li>
-					<li>Assignment 2: 25%</li>
-					<li>Final exam: 50%</li>
+					<li><a>Exercise sheet 1</a> (available in week 5, deadline end of week 6)</li>
+					<li><a>Exercise sheet 2</a> (available in week 8, deadline end of week 8)</li>
 				</ul>
-				<p>As usual the passing grade will be 60% for the final grade.</p>
+				<h4>Examination:</h4>
+				<p>The final mark for the lecture will be comprised of the following parts:
+				<ul>
+					<li>Written report on sheet 1: <b>Deadline: tba</b></li>
+					<li>Written report on sheet 2: <b>Deadline: tba</b></li>
+					<li>Written exam after the end of the course</li>
+				</ul>
+				Each exercise report will make up 30% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
+				<p></p>	
 				<h4>References:</h4>
 				<p class="card-text">We will not follow any specific book, but there will be updated lecture notes available after each lecture. For anyone that is interested in reading up on some more background or additional content, the following books contain various parts of the course:<br/>
 				<ul>
