--- a/lectures/ls-algebra2-2023.html
+++ b/lectures/ls-algebra2-2023.html
@@ -74,8 +74,8 @@
 				<h3 class="redtext">Exam:</h3>
 				<p class="redtext"><b>tba</b></p>	
 				<h4>Time and place:</h4>
-				<p><b>Thursday:</b> 6-7节， 文萃楼 G130 (3-10 周)</p>			
-				<p><b>Friday:</b> 6-7节， 文萃楼 G130 (3-10 周)</p>			
+				<p><b>Thursday:</b> 13:20 - 14:55， 文萃楼 G130 (3-10 周)</p>			
+				<p><b>Friday:</b> 13:20 - 14:55， 文萃楼 G130 (3-10 周)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">This course is an introduction to modern abstract algebra. The focus will be on properties of rings and modules over rings.</p>
