--- a/lectures/ls-alggeometry-2023.html
+++ b/lectures/ls-alggeometry-2023.html
@@ -74,8 +74,8 @@
 				<h3 class="redtext">Exam:</h3>
 				<p class="redtext"><b>tba</b></p>	
 				<h4>Time and place:</h4>
-				<p><b>Thursday:</b> 1-2节， 文萃楼 F102 (5-12 周)</p>			
-				<p><b>Friday:</b> 1-2节， 文萃楼 F102 (5-12 周)</p>			
+				<p><b>Thursday:</b> 8:00 - 9:35， 文萃楼 F102 (5-12 周)</p>			
+				<p><b>Friday:</b> 8:00 - 9:35， 文萃楼 F102 (5-12 周)</p>			
 				<br/>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures.</p>
